--- a/public/index.html
+++ b/public/index.html
@@ -5,24 +5,24 @@
 		<link
 			rel="apple-touch-icon"
 			sizes="180x180"
-			href="./favicons/apple-touch-icon.png"
+			href="/favicons/apple-touch-icon.png"
 		/>
 		<link
 			rel="icon"
 			type="image/png"
 			sizes="32x32"
-			href="./favicons/favicon-32x32.png"
+			href="/favicons/favicon-32x32.png"
 		/>
 		<link
 			rel="icon"
 			type="image/png"
 			sizes="16x16"
-			href="./favicons/favicon-16x16.png"
+			href="/favicons/favicon-16x16.png"
 		/>
-		<link rel="manifest" href="./favicons/site.webmanifest" />
+		<link rel="manifest" href="/favicons/site.webmanifest" />
 		<link
 			rel="mask-icon"
-			href="./favicons/safari-pinned-tab.svg"
+			href="/favicons/safari-pinned-tab.svg"
 			color="#12487b"
 		/>
 		<meta name="msapplication-TileColor" content="#2b5797" />
@@ -42,7 +42,7 @@
 			integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
 			crossorigin="anonymous"
 		/>
-		<link type="text/css" rel="stylesheet" href="./css/main.css" />
+		<link type="text/css" rel="stylesheet" href="/css/main.css" />
 		<!-- Google Fonts -->
 		<link rel="preconnect" href="https://fonts.gstatic.com" />
 		<link
