--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,20 @@
 			src="https://kit.fontawesome.com/029e6dbdc2.js"
 			crossorigin="anonymous"
 		></script>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script
+			async
+			src="https://www.googletagmanager.com/gtag/js?id=G-N3BXW117RS"
+		></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag("js", new Date());
+
+			gtag("config", "G-N3BXW117RS");
+		</script>
 		<title>
 			TCA Developments - Construction Consultant & General Contractor
 		</title>
