--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
 			integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
 			crossorigin="anonymous"
 		/>
-		<link type="text/css" rel="stylesheet" href="/css/main.css" />
+		<!-- <link type="text/css" rel="stylesheet" href="/dist/css/main.css" /> -->
 		<!-- Google Fonts -->
 		<link rel="preconnect" href="https://fonts.gstatic.com" />
 		<link
