--- a/public/index.html
+++ b/public/index.html
@@ -36,12 +36,12 @@
 			name="description"
 			content="Since our inception we have chosen to pride ourselves on “Quality” and “Attention to Detail” making TCA Developments “The Right Course To Great Developments."
 		/>
-		<link
+		<!-- <link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
 			rel="stylesheet"
 			integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
 			crossorigin="anonymous"
-		/>
+		/> -->
 		<!-- Google Fonts -->
 		<link rel="preconnect" href="https://fonts.gstatic.com" />
 		<link
@@ -68,7 +68,7 @@
 	</head>
 	<body>
 		<div id="root"></div>
-		<link
+		<!-- <link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
 			rel="stylesheet"
 			integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
@@ -78,6 +78,6 @@
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
 			crossorigin="anonymous"
-		></script>
+		></script> -->
 	</body>
 </html>
