Updated the home page content

--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,15 @@
 
 			gtag("config", "G-N3BXW117RS");
 		</script>
+		<!-- Google Maps Embed -->
+		<link
+			rel="preconnect"
+			href="https://www.google.com/maps/embed/v1/place?key=AIzaSyAYBtxVWVGtUF3eBnx_qiNXizLh5ETvw_o&q=16065+132+Ave+NW,Edmonton,Alberta&zoom=12"
+		/>
+		<link
+			rel="dns-prefetch"
+			href="https://www.google.com/maps/embed/v1/place?key=AIzaSyAYBtxVWVGtUF3eBnx_qiNXizLh5ETvw_o&q=16065+132+Ave+NW,Edmonton,Alberta&zoom=12"
+		/>
 		<title>
 			TCA Developments - Construction Consultant & General Contractor
 		</title>
