--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
 			rel="stylesheet"
 		/>
 		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script
+		<!-- <script
 			async
 			src="https://www.googletagmanager.com/gtag/js?id=G-N3BXW117RS"
 		></script>
@@ -55,7 +55,7 @@
 			gtag("js", new Date());
 
 			gtag("config", "G-N3BXW117RS");
-		</script>
+		</script> -->
 		<!-- Google Maps Embed -->
 		<link
 			rel="preconnect"
