--- a/public/index.html
+++ b/public/index.html
@@ -34,11 +34,12 @@
 		<meta name="author" content="Tristan Deane" />
 		<meta
 			name="description"
-			content="Since our inception we have chosen to pride ourselves on “Quality” and “Attention to Detail” making TCA Developments “The Right Course To Great Developments."
+			content="TCA Developments specializes in commercial renovations. We are committed to producing quality facilities that are on time, under budget, and will exceed your expectations!"
 		/>
 		<!-- Google Fonts -->
-		<link rel="preconnect" href="https://fonts.gstatic.com" />
+		<link async rel="preconnect" href="https://fonts.gstatic.com" />
 		<link
+			async
 			href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap"
 			rel="stylesheet"
 		/>
