--- a/public/offline.html
+++ b/public/offline.html
@@ -3,7 +3,9 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>TCA Developments</title>
+		<title>
+			TCA Developments - Construction Consultant & General Contractor
+		</title>
 		<style type="text/css">
 			html {
 				height: 100%;
